refactor: reorganize package structure and enhance class documentation